2006-10-16  Kevin McCullough  <KMcCullough@apple.com>

        Reviewed by John.

        Fixes a compile order issue for testkjs on win.

        * JavaScriptCore.vcproj/testkjs/testkjs.vcproj:

2006-10-15  Krzysztof Kowalczyk  <kkowalczyk@gmail.com>

        Reviewed by Anders.

        Remove junk (as gcc calls it) after #else clause.

        * wtf/FastMalloc.cpp:
        (WTF::do_free):

2006-10-14  Krzysztof Kowalczyk  <kkowalczyk@gmail.com>

        Reviewed by Maciej.

        Define KXMLCORE_USE_CURL for platforms that wish to use CURL as
        networking, and set it for GDK build

        * wtf/Platform.h:

2006-10-13  Marvin Decker  <marv.decker@gmail.com>

        Reviewed by Kevin McCullough.

        Fixes http://bugs.webkit.org/show_bug.cgi?id=11283
        Fixes Qt/Linux and Windows build

        * kjs/DateMath.cpp:
        * kjs/DateMath.h:
        * kjs/date_object.cpp:
        (KJS::DateProtoFunc::callAsFunction):

2006-10-13  Kevin McCullough  <KMcCullough@apple.com>

        Reviewed by Adam, Geoff, Darin.

       Fixed displaying the UTC offset and time zone string, as well as renamed the GregorianDateTime structure and clean up. 

        * ChangeLog:
        * kjs/DateMath.cpp:
        (KJS::getUTCOffset):
        (KJS::getDSTOffsetSimple):
        (KJS::gregorianDateTimeToMS):
        (KJS::msToGregorianDateTime):
        * kjs/DateMath.h:
        (KJS::GregorianDateTime::GregorianDateTime):
        (KJS::GregorianDateTime::~GregorianDateTime):
        (KJS::GregorianDateTime::toTM):
        * kjs/date_object.cpp:
        (KJS::gmtoffset):
        (KJS::formatDate):
        (KJS::formatDateUTCVariant):
        (KJS::formatTime):
        (KJS::fillStructuresUsingTimeArgs):
        (KJS::fillStructuresUsingDateArgs):
        (KJS::DateInstance::getTime):
        (KJS::DateInstance::getUTCTime):
        (KJS::DateProtoFunc::callAsFunction):
        (KJS::DateObjectImp::construct):
        (KJS::DateObjectImp::callAsFunction):